# toml document
[owner]
name = "Elbio Peña"
dob = 2023-02-17T11:07:00

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'chemeq'
version = '0.1.1'
description = '''Balance chemical equations, periodic table of elements'''
readme = "README.txt"
authors = [ { name = "Elbio Peña", email="elbioemilio@outlook.es" } ]
requires-python = ">= 3.6"
keywords = ["chemistry", "chemical", "chemicals", "equation",
            "equations", "balance", "balancer", "balancing", "reaction",
            "reactions", "periodic table", "elements"]
classifiers = ["Development Status :: 5 - Production/Stable",
               "Programming Language :: Python :: 3",
               "Operating System :: OS Independent",
               "Intended Audience :: Education",
               "Intended Audience :: End Users/Desktop"]

[project.urls]
repository = "https://github.com/elbiop/chemeq"
